@@ -29,8 +29,9 @@ import org.graylog.scheduler.capabilities.SchedulerCapabilitiesService;
 import org.graylog.scheduler.clock.JobSchedulerClock;
 import org.graylog.scheduler.schedule.IntervalJobSchedule;
 import org.graylog.scheduler.schedule.OnceJobSchedule;
+import org.graylog.testing.mongodb.MongoDBExtension;
 import org.graylog.testing.mongodb.MongoDBFixtures;
-import org.graylog.testing.mongodb.MongoDBInstance;
+import org.graylog.testing.mongodb.MongoDBTestService;
 import org.graylog2.bindings.providers.MongoJackObjectMapperProvider;
 import org.graylog2.database.MongoCollections;
 import org.graylog2.database.utils.MongoUtils;
@@ -38,12 +39,13 @@ import org.graylog2.plugin.system.NodeId;
 import org.graylog2.plugin.system.SimpleNodeId;
 import org.graylog2.shared.bindings.providers.ObjectMapperProvider;
 import org.joda.time.DateTime;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 import java.util.Collections;
 import java.util.List;
@@ -63,15 +65,12 @@ import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-public class DBJobTriggerServiceTest {
+@ExtendWith(MockitoExtension.class)
+@ExtendWith(MongoDBExtension.class)
+@MockitoSettings(strictness = Strictness.WARN)
+class DBJobTriggerServiceTest {
     private static final String NODE_ID = "node-1";
     private static final Duration EXPIRATION_DURATION = Duration.minutes(5);
-
-    @Rule
-    public final MongoDBInstance mongodb = MongoDBInstance.createForClass();
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     private final NodeId nodeId = new SimpleNodeId(NODE_ID);
 
@@ -80,11 +79,10 @@ public class DBJobTriggerServiceTest {
 
     private DBJobTriggerService dbJobTriggerService;
     private final JobSchedulerTestClock clock = new JobSchedulerTestClock(DateTime.parse("2019-07-29T00:00:00.000Z"));
-    private MongoJackObjectMapperProvider mapperProvider;
     private MongoCollections mongoCollections;
 
-    @Before
-    public void setUp() throws Exception {
+    @BeforeEach
+    void setUp(MongoDBTestService dbTestService) {
         lenient().when(schedulerCapabilitiesService.getNodeCapabilities()).thenReturn(ImmutableSet.of());
 
         ObjectMapper objectMapper = new ObjectMapperProvider().get();
@@ -92,8 +90,8 @@ public class DBJobTriggerServiceTest {
         objectMapper.registerSubtypes(new NamedType(OnceJobSchedule.class, OnceJobSchedule.TYPE_NAME));
         objectMapper.registerSubtypes(new NamedType(TestJobTriggerData.class, TestJobTriggerData.TYPE_NAME));
 
-        mapperProvider = new MongoJackObjectMapperProvider(objectMapper);
-        this.mongoCollections = new MongoCollections(mapperProvider, mongodb.mongoConnection());
+        final var mapperProvider = new MongoJackObjectMapperProvider(objectMapper);
+        mongoCollections = new MongoCollections(mapperProvider, dbTestService.mongoConnection());
         this.dbJobTriggerService = serviceWithClock(clock);
     }
 
@@ -103,7 +101,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void loadPersistedTriggers() {
+    void loadPersistedTriggers() {
         // Sort by ID to make sure we have a defined order
         final List<JobTriggerDto> all;
         try (Stream<JobTriggerDto> triggerStream = dbJobTriggerService.streamAll()) {
@@ -125,7 +123,7 @@ public class DBJobTriggerServiceTest {
             assertThat(dto.triggeredAt()).isNotPresent();
             assertThat(dto.status()).isEqualTo(JobTriggerStatus.RUNNABLE);
             assertThat(dto.executionDurationMs()).isEmpty();
-            assertThat(dto.concurrencyRescheduleCount()).isEqualTo(0);
+            assertThat(dto.concurrencyRescheduleCount()).isZero();
             assertThat(dto.constraints()).isEmpty();
             assertThat(dto.isCancelled()).isFalse();
 
@@ -153,7 +151,7 @@ public class DBJobTriggerServiceTest {
             assertThat(dto.triggeredAt()).isNotPresent();
             assertThat(dto.status()).isEqualTo(JobTriggerStatus.RUNNABLE);
             assertThat(dto.executionDurationMs()).isEmpty();
-            assertThat(dto.concurrencyRescheduleCount()).isEqualTo(0);
+            assertThat(dto.concurrencyRescheduleCount()).isZero();
             assertThat(dto.constraints()).isEmpty();
             assertThat(dto.isCancelled()).isFalse();
 
@@ -185,7 +183,7 @@ public class DBJobTriggerServiceTest {
             assertThat(dto.triggeredAt()).isPresent().get().isEqualTo(DateTime.parse("2019-01-01T01:00:00.000Z"));
             assertThat(dto.status()).isEqualTo(JobTriggerStatus.RUNNING);
             assertThat(dto.executionDurationMs()).isEmpty();
-            assertThat(dto.concurrencyRescheduleCount()).isEqualTo(0);
+            assertThat(dto.concurrencyRescheduleCount()).isZero();
             assertThat(dto.constraints()).isEmpty();
             assertThat(dto.isCancelled()).isFalse();
 
@@ -209,7 +207,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void getForJob() {
+    void getForJob() {
         assertThatCode(() -> dbJobTriggerService.getOneForJob(null))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("jobDefinitionId");
@@ -235,7 +233,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void getAllForJob() {
+    void getAllForJob() {
 
         // We expect a ISE when there is more than one trigger for a single job definition
         assertThatCode(() -> dbJobTriggerService.getOneForJob("54e3deadbeefdeadbeefaff3"))
@@ -253,7 +251,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void getForJobs() {
+    void getForJobs() {
         assertThatCode(() -> dbJobTriggerService.getForJobs(null))
                 .isInstanceOf(IllegalArgumentException.class)
                 .hasMessageContaining("jobDefinitionId");
@@ -265,13 +263,13 @@ public class DBJobTriggerServiceTest {
                 .hasSize(2)
                 .satisfies(triggers -> {
                     assertThat(triggers.get("54e3deadbeefdeadbeefaff4")).hasSize(1);
-                    assertThat(triggers.get("54e3deadbeefdeadbeefaff4").get(0)).satisfies(trigger -> {
+                    assertThat(triggers.get("54e3deadbeefdeadbeefaff4").getFirst()).satisfies(trigger -> {
                         assertThat(trigger.id()).isEqualTo("54e3deadbeefdeadbeef0002");
                         assertThat(trigger.jobDefinitionId()).isEqualTo("54e3deadbeefdeadbeefaff4");
                     });
 
                     assertThat(triggers.get("54e3deadbeefdeadbeefaff5")).hasSize(1);
-                    assertThat(triggers.get("54e3deadbeefdeadbeefaff5").get(0)).satisfies(trigger -> {
+                    assertThat(triggers.get("54e3deadbeefdeadbeefaff5").getFirst()).satisfies(trigger -> {
                         assertThat(trigger.id()).isEqualTo("54e3deadbeefdeadbeef0003");
                         assertThat(trigger.jobDefinitionId()).isEqualTo("54e3deadbeefdeadbeefaff5");
                     });
@@ -284,7 +282,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void getOrCreateTrigger() {
+    void getOrCreateTrigger() {
         final String id = new ObjectId().toHexString();
         final JobTriggerDto trigger = dbJobTriggerService.getOrCreate(JobTriggerDto.Builder.create(clock)
                 .id(id)
@@ -306,7 +304,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void createTrigger() {
+    void createTrigger() {
         final JobTriggerDto trigger = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -326,7 +324,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void createTriggerWithID() {
+    void createTriggerWithID() {
         final JobTriggerDto trigger = JobTriggerDto.Builder.create(clock)
                 .id("5b983c77d06b3f114bf130e2")
                 .jobDefinitionId("abc-123")
@@ -343,7 +341,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void updateTrigger() {
+    void updateTrigger() {
         final JobTriggerDto originalTrigger = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -414,7 +412,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void nextRunnableTriggerWithPausedCompletedAndErrorStatus() {
+    void nextRunnableTriggerWithPausedCompletedAndErrorStatus() {
         // No triggers yet
         assertThat(dbJobTriggerService.nextRunnableTrigger()).isEmpty();
 
@@ -476,7 +474,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void nextRunnableTrigger() {
+    void nextRunnableTrigger() {
         // No triggers yet
         assertThat(dbJobTriggerService.nextRunnableTrigger()).isEmpty();
 
@@ -551,16 +549,16 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void nextRunnableTriggerWithEndTime() {
+    void nextRunnableTriggerWithEndTime() {
         // Set clock to base date used in the fixture file
-        final JobSchedulerTestClock clock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T00:00:00.000Z"));
-        final DBJobTriggerService service = serviceWithClock(clock);
+        final JobSchedulerTestClock currentClock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T00:00:00.000Z"));
+        final DBJobTriggerService service = serviceWithClock(currentClock);
 
         // No triggers yet because 54e3deadbeefdeadbeef0002 is already locked and RUNNING
         assertThat(service.nextRunnableTrigger()).isEmpty();
 
         // Advancing the clock a bit
-        clock.plus(2, TimeUnit.HOURS);
+        currentClock.plus(2, TimeUnit.HOURS);
 
         // Now we should get trigger 54e3deadbeefdeadbeef0000
         assertThat(service.nextRunnableTrigger())
@@ -572,7 +570,7 @@ public class DBJobTriggerServiceTest {
         assertThat(service.nextRunnableTrigger()).isEmpty();
 
         // Advancing clock far into the future, past the endTime of trigger 54e3deadbeefdeadbeef0001
-        clock.plus(40, TimeUnit.DAYS);
+        currentClock.plus(40, TimeUnit.DAYS);
 
         // We shouldn't get trigger 54e3deadbeefdeadbeef0001 because of its endTime
         assertThat(service.nextRunnableTrigger()).isEmpty();
@@ -596,7 +594,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseTrigger() {
+    void releaseTrigger() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -630,7 +628,7 @@ public class DBJobTriggerServiceTest {
                     assertThat(trigger.status()).isEqualTo(JobTriggerStatus.RUNNABLE);
                     assertThat(trigger.nextTime()).isEqualTo(update.nextTime().orElse(null));
                     assertThat(trigger.executionDurationMs()).isPresent().get().isEqualTo(15_000L);
-                    assertThat(trigger.concurrencyRescheduleCount()).isEqualTo(0);
+                    assertThat(trigger.concurrencyRescheduleCount()).isZero();
                     assertThat(trigger.data()).isPresent().get().satisfies(data -> {
                         assertThat(data).isInstanceOf(TestJobTriggerData.class);
                         assertThat(data).isEqualTo(TestJobTriggerData.create(Collections.singletonMap("hello", "world")));
@@ -642,7 +640,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseTriggerWithConcurrencyRescheduleCount() {
+    void releaseTriggerWithConcurrencyRescheduleCount() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -682,7 +680,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseTriggerWithoutNextTime() {
+    void releaseTriggerWithoutNextTime() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -720,7 +718,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseTriggerWithStatus() {
+    void releaseTriggerWithStatus() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -757,7 +755,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseTriggerWithInvalidArguments() {
+    void releaseTriggerWithInvalidArguments() {
 
         assertThatCode(() -> dbJobTriggerService.releaseTrigger(null, null))
                 .isInstanceOf(NullPointerException.class)
@@ -773,7 +771,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void releaseCancelledTrigger() {
+    void releaseCancelledTrigger() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -817,7 +815,7 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
-    public void setTriggerError() {
+    void setTriggerError() {
         final JobTriggerDto trigger1 = dbJobTriggerService.create(JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -851,7 +849,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void delete() {
+    void delete() {
         assertThat(dbJobTriggerService.delete("54e3deadbeefdeadbeef0000")).isTrue();
         assertThat(dbJobTriggerService.delete("54e3deadbeefdeadbeef9999")).isFalse();
 
@@ -866,14 +864,14 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void deleteCompleted() {
+    void deleteCompleted() {
         assertThat(dbJobTriggerService.deleteCompletedOnceSchedulesOlderThan(1, TimeUnit.DAYS)).isEqualTo(1);
         assertThat(dbJobTriggerService.get("54e3deadbeefdeadbeef0003")).isNotPresent();
     }
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void deleteCompletedTooNew() {
+    void deleteCompletedTooNew() {
         final JobTriggerDto trigger = dbJobTriggerService.get("54e3deadbeefdeadbeef0003").orElseThrow(AssertionError::new);
         // sets updated_at to recent timestamp
         dbJobTriggerService.update(trigger);
@@ -881,8 +879,18 @@ public class DBJobTriggerServiceTest {
     }
 
     @Test
+    @MongoDBFixtures("failed-job-trigger.json")
+    void deleteInStateErrorCompleted() {
+        final String docId = "54e3deadbeefdeadbeef0005";
+        assertThat(dbJobTriggerService.get(docId)).isPresent();
+        assertThat(dbJobTriggerService.deleteCompletedOnceSchedulesOlderThan(1, TimeUnit.DAYS)).isEqualTo(1);
+        //The trigger in state "error" is also deleted:
+        assertThat(dbJobTriggerService.get(docId)).isNotPresent();
+    }
+
+    @Test
     @MongoDBFixtures("stale-job-triggers.json")
-    public void forceReleaseOwnedTriggers() {
+    void forceReleaseOwnedTriggers() {
         final Set<String> triggerIds;
         try (Stream<JobTriggerDto> triggerStream = dbJobTriggerService.streamAll()) {
             triggerIds = triggerStream
@@ -909,7 +917,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("stale-job-triggers.json")
-    public void forceReleaseOwnedCancelledTriggers() {
+    void forceReleaseOwnedCancelledTriggers() {
         final Set<String> cancelledTriggerIds;
         try (Stream<JobTriggerDto> triggerStream = dbJobTriggerService.streamAll()) {
             cancelledTriggerIds = triggerStream
@@ -936,9 +944,9 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("stale-job-triggers-with-expired-lock.json")
-    public void nextStaleTrigger() {
-        final JobSchedulerTestClock clock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T02:00:00.000Z"));
-        final DBJobTriggerService service = serviceWithClock(clock);
+    void nextStaleTrigger() {
+        final JobSchedulerTestClock currentClock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T02:00:00.000Z"));
+        final DBJobTriggerService service = serviceWithClock(currentClock);
 
         assertThat(service.nextRunnableTrigger())
                 .isNotEmpty()
@@ -948,10 +956,10 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("locked-job-triggers.json")
-    public void updateLockedJobTriggers() {
+    void updateLockedJobTriggers() {
         DateTime newLockTime = DateTime.parse("2019-01-01T02:00:00.000Z");
-        final JobSchedulerTestClock clock = new JobSchedulerTestClock(newLockTime);
-        final DBJobTriggerService service = serviceWithClock(clock);
+        final JobSchedulerTestClock currentClock = new JobSchedulerTestClock(newLockTime);
+        final DBJobTriggerService service = serviceWithClock(currentClock);
 
         service.updateLockedJobTriggers();
 
@@ -960,13 +968,13 @@ public class DBJobTriggerServiceTest {
             updatedJobTriggerIds = triggerStream
                     .filter(jobTriggerDto -> newLockTime.equals(jobTriggerDto.lock().lastLockTime()))
                     .map(JobTriggerDto::id)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         assertThat(updatedJobTriggerIds).containsOnly("54e3deadbeefdeadbeef0001", "54e3deadbeefdeadbeef0002");
     }
 
     @Test
-    public void triggerWithConstraints() {
+    void triggerWithConstraints() {
         final JobTriggerDto.Builder triggerBuilder = JobTriggerDto.Builder.create(clock)
                 .jobDefinitionId("abc-123")
                 .jobDefinitionType("event-processor-execution-v1")
@@ -1016,10 +1024,10 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers.json")
-    public void updateProgress() {
+    void updateProgress() {
         final JobTriggerDto trigger = dbJobTriggerService.get("54e3deadbeefdeadbeef0003").orElseThrow(AssertionError::new);
 
-        assertThat(trigger.lock().progress()).isEqualTo(0);
+        assertThat(trigger.lock().progress()).isZero();
 
         assertThat(dbJobTriggerService.updateProgress(trigger, 42)).isEqualTo(1);
 
@@ -1030,7 +1038,7 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("locked-job-triggers.json")
-    public void cancelTriggerByQuery() {
+    void cancelTriggerByQuery() {
         // Must return an empty Optional if the query didn't match any trigger
         assertThat(dbJobTriggerService.cancelTriggerByQuery(Filters.eq("foo", "bar"))).isEmpty();
 
@@ -1047,9 +1055,9 @@ public class DBJobTriggerServiceTest {
 
     @Test
     @MongoDBFixtures("job-triggers-for-overdue-count.json")
-    public void numberOfOverdueTriggers() {
-        final JobSchedulerTestClock clock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T04:00:00.000Z"));
-        final DBJobTriggerService service = serviceWithClock(clock);
+    void numberOfOverdueTriggers() {
+        final JobSchedulerTestClock currentClock = new JobSchedulerTestClock(DateTime.parse("2019-01-01T04:00:00.000Z"));
+        final DBJobTriggerService service = serviceWithClock(currentClock);
 
         final Map<String, Long> result = service.numberOfOverdueTriggers();
 
